--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 <h1>Gabriel El Bendary Portfolio</h1>
 
 <ul class="nav">
-    <li> <a href="C:\Users\Gabriel\Desktop\Coding\HTML\Lebenslauf Gabriel El Bendary.html"
-            target="_blank">Lebenslauf.</a> </li>
+    <li> <a href=https://github.com/gammelboy15/Gabriel-El-Bendary-HTML-Portfolio/edit/main/index.html
+        	target="_blank">Lebenslauf.</a> </li>
     <li> <a href="C:\Users\Gabriel\Desktop\Coding\HTML\Commerzbank Anschreiben.html" target="_blank">Anschreiben.</a> </li>
     <li> <a href="C:\Users\Gabriel\Desktop\Coding\HTML\Erfahrung.html" target="_blank">Erfahrung.</a> </li>
 </ul>
