--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	
 <head>
-	<title>Gabriel El Bendary Portfolio</title> <img src=https://github.com/gammelboy15/Gabriel-El-Bendary-HTML-Portfolio/blob/main/Gabriel%20El%20Bendary.JPG alt="Gabriel el Bendary" style="float:right;width:320px;height:390px;">
+	<title>Gabriel El Bendary Portfolio</title> <img src="https://github.com/gammelboy15/Gabriel-El-Bendary-HTML-Portfolio/blob/main/Gabriel%20El%20Bendary.JPG" alt="Gabriel el Bendary" style="float:right;width:320px;height:390px;">
     <style>
      body{
 		 font-family: Arial,sans-serif;
@@ -55,7 +55,7 @@
 <h1>Gabriel El Bendary Portfolio</h1>
 
 <ul class="nav">
-    <li> <a href=https://github.com/gammelboy15/Gabriel-El-Bendary-HTML-Portfolio/edit/main/index.html
+    <li> <a href="https://github.com/gammelboy15/Gabriel-El-Bendary-HTML-Portfolio/edit/main/index.html"
         	target="_blank">Lebenslauf.</a> </li>
     <li> <a href="C:\Users\Gabriel\Desktop\Coding\HTML\Commerzbank Anschreiben.html" target="_blank">Anschreiben.</a> </li>
     <li> <a href="C:\Users\Gabriel\Desktop\Coding\HTML\Erfahrung.html" target="_blank">Erfahrung.</a> </li>
