--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	
 <head>
-	<title>Gabriel El Bendary Portfolio</title> <img src="https://github.com/gammelboy15/Gabriel-El-Bendary-HTML-Portfolio/blob/main/Gabriel%20El%20Bendary.JPG" alt="Gabriel el Bendary" style="float:right;width:320px;height:390px;">
+	<title>Gabriel El Bendary Portfolio</title> <img src="Gabriel El Bendary.JPG" alt="Gabriel el Bendary" style="float:right;width:320px;height:390px;">
     <style>
      body{
 		 font-family: Arial,sans-serif;
