--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <h1>Gabriel El Bendary Portfolio</h1>
 
 <ul class="nav">
-    <li> <a href="https://github.com/gammelboy15/Gabriel-El-Bendary-HTML-Portfolio/edit/main/index.html"
+    <li> <a href="https://gammelboy15.github.io/Gabriel-El-Bendary-Lebenslauf/"
         	target="_blank">Lebenslauf.</a> </li>
-    <li> <a href="C:\Users\Gabriel\Desktop\Coding\HTML\Commerzbank Anschreiben.html" target="_blank">Anschreiben.</a> </li>
+    <li> <a href="https://gammelboy15.github.io/Gabriel-El-Bendary-Anschreiben/" target="_blank">Anschreiben.</a> </li>
     <li> <a href="C:\Users\Gabriel\Desktop\Coding\HTML\Erfahrung.html" target="_blank">Erfahrung.</a> </li>
 </ul>
 
