--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 
  <div class="bottom">
 
-<p>Hallo,mein name ist Gabriel El Bendary.</p>
-<p>Ich bin geboren am 15.06.2005 und bin seit neuestem auf der suche nach einer Ausbildung zum Fachinformatiker für Anwendungsentwickelung. Auf den Überliegenden links lade ich sie herzlich ein sich mein Anschreiben sowie meinen Lebenslauf anzusehen.</p>
-<p>Beigefügt sind ebenfalls ein paar erfahrungen welche ich bereits im bereich IT gesammelt habe.</p>
+<p>Hallo, mein Name ist Gabriel El Bendary.</p>
+<p>Ich bin geboren am 15.06.2005 und bin seit Kurzem auf der Suche nach einer Ausbildung zum Fachinformatiker für Anwendungsentwicklung.  Auf den obenstehenden Links lade ich Sie herzlich ein, sich mein Anschreiben sowie meinen Lebenslauf anzusehen.</p>
+<p>Beigefügt sind ebenfalls ein paar Erfahrungen, welche ich bereits im Bereich IT gesammelt habe.</p>
 
 <table style="width:100%">
   <tr>
